技 术 栈：并发编程 提交说明: 享元模式之连接池实现

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之不可变.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之不可变.md
@@ -70,9 +70,47 @@ public class Test40 {
 
 ##### 思路 - 不可变
 
+不可变类也可以保证在多线程环境下的线程安全问题
+
+```java
+@Slf4j(topic = "test")
+public class Test40 {
+    public static void main(String[] args) {
+        DateTimeFormatter sdf = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+        for (int i = 0; i < 10; i++) {
+            new Thread(() -> {
+                try {
+                    log.debug("{}", sdf.parse("1951-04-21"));
+                } catch (Exception e) {
+                    log.error("{}", e);
+                }
+            }).start();
+        }
+    }
+}
+```
+
 #### 不可变类设计
 
+不可变String类示例
+
+```java
+public final class String
+ implements java.io.Serializable, Comparable<String>, CharSequence {
+ /** The value is used for character storage. */
+ private final char value[];
+ /** Cache the hash code for the string */
+ private int hash; // Default to 0
+ // ...
+}
+```
+
 ##### final的使用
+
+我们可以发现String类和类属性都是final修饰
+
+1. 类属性使用final修饰保证了该属性是只读的，不能被修改
+2. 类本身使用final修饰保证该类中的方法不能被覆盖，可以防止子类破坏父类方法的不可变性
 
 ##### 保护性拷贝
 
