--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -913,3 +913,178 @@ public class Test25MQ {
 
 ##### ❗❗应用
 
+### 享元模式
+
+#### 简介
+
+享元模式是通过共享尽可能多的数据来最小化内存的使用
+
+#### 体现
+
+##### 包装类
+
+在JDK中 Boolean，Byte，Short，Integer，Long，Character 等包装类提供了 valueOf 方法，例如 Long 的 valueOf 会缓存 -128~127 之间的 Long 对象，在这个范围之间会重用对象，大于这个范围，才会新建 Long 对 象
+
+```java
+public static Long valueOf(long l) {
+    final int offset = 128;
+    if (l >= -128 && l <= 127) { // will cache
+        return LongCache.cache[(int)l + offset];
+    }
+    return new Long(l);
+}
+```
+
+##### String字符串池
+
+##### BigDecimal BigInteger
+
+#### 数据库连接池场景模拟享元模式
+
+##### 背景介绍
+
+一个线上应用商城系统，QPS达到数千，如果每次连接都创建和关闭数据库连接，系统的性能将会收到非常大的影响。这时我们可以预先建议好一批连接，放入数据库连接池中。一次请求到达之后直接从连接池中取出数据库连接，使用完毕之后再归还连接池。
+
+这样既可以节约连接创建和关闭的时间，也可以实现连接的复用，不至于让庞大的请求压垮数据库
+
+##### 代码实现
+
+```java
+@Slf4j(topic = "ConnectionPool")
+class ConnectionPool {
+
+    /**
+     * 数据库连接池大小
+     * 创建连接池时需要指定连接池大小，之后不能改变
+     */
+    private final int poolSize;
+
+    /**
+     * 连接池对象数组
+     */
+    private Connection[] connections;
+
+    /**
+     * 连接状态数组(线程安全的)
+     * 0: 空闲  1: 繁忙
+     */
+    private AtomicIntegerArray states;
+
+    /**
+     * 构造方法，初始化数据
+     * @param poolSize 连接池大小
+     */
+    public ConnectionPool(int poolSize) {
+        this.poolSize = poolSize;
+        this.connections = new Connection[poolSize];
+        this.states = new AtomicIntegerArray(new int[poolSize]);
+
+        for (int i = 0; i < poolSize; i++) {
+            connections[i] = new MockConnection("连接" + (i + 1));
+        }
+    }
+
+    /**
+     * @return 获取数据库连接
+     */
+    public Connection borrow() {
+        while (true) {
+            for (int i = 0; i < poolSize; i++) {
+                // 获取空闲连接
+                if (states.get(i) == 0) {
+                    // 考虑线程安全问题 判断CAS操作是否成功
+                    if (states.compareAndSet(i, 0, 1)) {
+                        log.info("borrow：{}", connections[i]);
+                        return connections[i];
+                    }
+                }
+            }
+            // 如果没有空闲连接，则线程进入等待状态爱
+            synchronized (this) {
+                try {
+                    log.info("wait...");
+                    this.wait();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+
+    }
+
+    /**
+     * @param connection 归还数据库连接
+     */
+    public void free(Connection connection) {
+        for (int i = 0; i < poolSize; i++) {
+            // 判断
+            if (connections[i] == connection) {
+                states.set(i, 0);
+                synchronized (this) {
+                    log.info("free：{}", connection);
+                    this.notifyAll();
+                }
+                break;
+            }
+        }
+    }
+}
+```
+
+```java
+class MockConnection implements Connection { 
+    private String name;
+
+    public MockConnection(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public String toString() {
+        return "MockConnection{" +
+                "name='" + name + '\'' +
+                '}';
+    }
+}
+```
+
+```java
+public static void main(String[] args) {
+    ConnectionPool connectionPool = new ConnectionPool(2);
+    for (int i = 0; i < 5; i++) {
+        new Thread(() -> {
+            Connection borrow = connectionPool.borrow();
+            try {
+                TimeUnit.SECONDS.sleep(1);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            } finally {
+                connectionPool.free(borrow);
+            }
+        }).start();
+    }
+}
+```
+
+```java
+15:34:39.646 [Thread-2] INFO ConnectionPool - wait...
+15:34:39.646 [Thread-0] INFO ConnectionPool - borrow：MockConnection{name='连接2'}
+15:34:39.646 [Thread-1] INFO ConnectionPool - borrow：MockConnection{name='连接1'}
+15:34:39.651 [Thread-4] INFO ConnectionPool - wait...
+15:34:39.651 [Thread-3] INFO ConnectionPool - wait...
+15:34:40.667 [Thread-0] INFO ConnectionPool - free：MockConnection{name='连接2'}
+15:34:40.667 [Thread-4] INFO ConnectionPool - borrow：MockConnection{name='连接2'}
+15:34:40.667 [Thread-2] INFO ConnectionPool - wait...
+15:34:40.667 [Thread-1] INFO ConnectionPool - free：MockConnection{name='连接1'}
+15:34:40.667 [Thread-3] INFO ConnectionPool - borrow：MockConnection{name='连接1'}
+15:34:40.667 [Thread-2] INFO ConnectionPool - wait...
+15:34:41.670 [Thread-3] INFO ConnectionPool - free：MockConnection{name='连接1'}
+15:34:41.670 [Thread-2] INFO ConnectionPool - borrow：MockConnection{name='连接1'}
+15:34:41.670 [Thread-4] INFO ConnectionPool - free：MockConnection{name='连接2'}
+15:34:42.681 [Thread-2] INFO ConnectionPool - free：MockConnection{name='连接1'}
+```
+
+
+
+
+
