技 术 栈：并发编程 提交说明: final原理

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之不可变.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之不可变.md
@@ -100,7 +100,7 @@ public final class String
  /** The value is used for character storage. */
  private final char value[];
  /** Cache the hash code for the string */
- private int hash; // Default to 0
+ private int hash; // Default to 
  // ...
 }
 ```
@@ -114,9 +114,33 @@ public final class String
 
 ##### 保护性拷贝
 
-##### 模式之享元
+这种拖过创建副本对象来避免共享的手段称之为`保护性拷贝`
+
+##### 模式之享元（数据库连接池实现）
 
 ##### 原理之final
+
+理解了 volatile 原理，再对比 final 的实现就比较简单了
+
+```java
+public class TestFinal {
+ final int a = 20;
+}
+```
+
+字节码
+
+```java
+0: aload_0
+1: invokespecial #1 // Method java/lang/Object."<init>":()V
+4: aload_0
+5: bipush 20
+7: putfield #2 // Field a:I
+ <-- 写屏障
+10: return
+```
+
+发现 final 变量的赋值也会通过 putfield 指令来完成，同样在这条指令之后也会加入写屏障，保证在其它线程读到 它的值时不会出现为 0 的情况
 
 #### 无状态
 
