技 术 栈：并发编程 提交说明: 无状态解释

--- a/doc/Java并发编程/并发编程-基础篇-共享模型之不可变.md
+++ b/doc/Java并发编程/并发编程-基础篇-共享模型之不可变.md
@@ -144,5 +144,9 @@ public class TestFinal {
 
 #### 无状态
 
+在web学习时，设计servlet时需要考虑线程安全问题，一般我们都不会为servlet创建成员变量，这种没有成员变量的类是线程安全的
+
+> 成员变量保存的数据称之为状态信息，因此没有成员变量就称之为无状态的
+
 #### 本章小结
 
