技 术 栈：并发编程 提交说明: 自定义线程池

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -2,6 +2,10 @@
 
 ### 线程池
 
+线程池基本组件
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2qyjimlyq0s0.png" alt="image" style="zoom:50%;" />
+
 #### 自定义线程池
 
 #### ThreadPoolExecute
