技 术 栈：并发编程 提交说明: 线程池构造方法

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -372,7 +372,25 @@ ctl.compareAndSet(c, ctlOf(targetState, workerCountOf(c))));
 private static int ctlOf(int rs, int wc) { return rs | wc; }
 ```
 
+##### 2)线程池构造方法
 
+```java
+public ThreadPoolExecutor(int corePoolSize,
+                          int maximumPoolSize,
+                          long keepAliveTime,
+                          TimeUnit unit,
+                          BlockingQueue<Runnable> workQueue,
+                          ThreadFactory threadFactory,
+                          RejectedExecutionHandler handler){}
+```
+
+- corePoolSize 核心线程池数量（最多保留的线程数）
+- maximumPoolSize 最大线程池数量
+- keepAliveTime 生存时间（针对救急线程）
+- unit 时间单位 - 针对救急线程 
+- workQueue 阻塞队列 
+- threadFactory 线程工厂 - 可以为线程创建时起个好名字 
+- handler 拒绝策略
 
 
 
