--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -392,6 +392,12 @@ public ThreadPoolExecutor(int corePoolSize,
 - threadFactory 线程工厂 - 可以为线程创建时起个好名字 
 - handler 拒绝策略
 
+##### 线程池的任务提交流程
+
+假设corePoolSize = 3， maximumPoolSize = 5， blockingQueueSize = 10，keepAliveTime = 3秒
+
+一开始有三个任务提交进来，这个三个任务由核心线程执行；接着有10个任务提交进来，这是核心线程池数量已经满了，此时的10个任务将放入阻塞队列中被等待执行；这个时候又有2个任务提交进来，这时阻塞队列也满了，最大线程池数量为5，核心线程池数量为3，表示线程池还可以**临时创建**2个**救急线程**来处理这两个任务；这时如果还有任务提交，则触发拒绝策略。救急线程处理完任务之后，过了`keepAliveTime` 设置的时间也就是3秒后，救急线程自动销毁
+
 
 
 #### Fork/Join
