技 术 栈：并发编程 提交说明: 线程池任务流转流程

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -398,7 +398,7 @@ public ThreadPoolExecutor(int corePoolSize,
 
 一开始有三个任务提交进来，这个三个任务由核心线程执行；接着有10个任务提交进来，这是核心线程池数量已经满了，此时的10个任务将放入阻塞队列中被等待执行；这个时候又有2个任务提交进来，这时阻塞队列也满了，最大线程池数量为5，核心线程池数量为3，表示线程池还可以**临时创建**2个**救急线程**来处理这两个任务；这时如果还有任务提交，则触发拒绝策略。救急线程处理完任务之后，过了`keepAliveTime` 设置的时间也就是3秒后，救急线程自动销毁
 
-
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2zsa9zzufi40.png" alt="image" style="zoom:50%;" />
 
 #### Fork/Join
 
