技 术 栈：并发编程 提交说明: ThreadPoolExecute简单使用

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -392,13 +392,80 @@ public ThreadPoolExecutor(int corePoolSize,
 - threadFactory 线程工厂 - 可以为线程创建时起个好名字 
 - handler 拒绝策略
 
-##### 线程池的任务提交流程
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2zsa9zzufi40.png" alt="image" style="zoom:50%;" />
+
+##### 3)线程池的任务提交流程
 
 假设corePoolSize = 3， maximumPoolSize = 5， blockingQueueSize = 10，keepAliveTime = 3秒
 
-一开始有三个任务提交进来，这个三个任务由核心线程执行；接着有10个任务提交进来，这是核心线程池数量已经满了，此时的10个任务将放入阻塞队列中被等待执行；这个时候又有2个任务提交进来，这时阻塞队列也满了，最大线程池数量为5，核心线程池数量为3，表示线程池还可以**临时创建**2个**救急线程**来处理这两个任务；这时如果还有任务提交，则触发拒绝策略。救急线程处理完任务之后，过了`keepAliveTime` 设置的时间也就是3秒后，救急线程自动销毁
+1. 一开始有三个任务提交进来，这个三个任务由核心线程执行；
+2. 接着有10个任务提交进来，这是核心线程池数量已经满了，此时的10个任务将放入阻塞队列中被等待执行；
+3. 这个时候又有2个任务提交进来，这时阻塞队列也满了，最大线程池数量为5，核心线程池数量为3，表示线程池还可以**临时创建**2个**救急线程**来处理这两个任务；
+4. 这时如果还有任务提交，则触发拒绝策略
+   1. AbortPolicy 让调用者抛出 RejectedExecutionException 异常，这是默认策略
+   2. CallerRunsPolicy 让调用者运行任务
+   3. DiscardPolicy 放弃本次任务
+   4. DiscardOldestPolicy 放弃队列中最早的任务，本任务取而代之
+   5. Dubbo 的实现，在抛出 RejectedExecutionException 异常之前会记录日志，并 dump 线程栈信息，方 便定位问题
+   6. Netty 的实现，是创建一个新线程来执行任务
+   7. ActiveMQ 的实现，带超时等待（60s）尝试放入队列，类似我们之前自定义的拒绝策略
+   8. PinPoint 的实现，它使用了一个拒绝策略链，会逐一尝试策略链中每种拒绝策略
+5. 当高峰过去后，超过corePoolSize 的救急线程如果一段时间没有任务做，需要结束节省资源，这个时间由 keepAliveTime 和 unit 来控制
 
-<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2zsa9zzufi40.png" alt="image" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.y1hypxf578w.png" alt="image" style="zoom:50%;" />
+
+##### 4)newFixedThreadPool
+
+**特点**
+
+1. 创建**固定大小核心线程池数量**的线程池
+2. 由于核心线程池数量和最大线程池数量相等，因此**没有救急线程**可言
+3. 阻塞队列是无界的，可以放任意数量的任务
+
+**应用场景**
+
+适用于任务量已知，相对耗时的场景
+
+**构造方法**
+
+```java
+public static ExecutorService newFixedThreadPool(int nThreads) {
+     return new ThreadPoolExecutor(nThreads,
+                                   nThreads,
+     								0L, 
+                                    TimeUnit.MILLISECONDS,
+     								new LinkedBlockingQueue<Runnable>()
+                 );
+}
+```
+
+**自定义线程工作代码实现**（自定义线程池名称）
+
+```java
+@Slf4j(topic = "ThreadPoolExecute")
+public class TestThreadPoolExecute {
+    public static void main(String[] args) {
+        ExecutorService pool = Executors.newFixedThreadPool(2, new ThreadFactory() {
+            private AtomicInteger atomicInteger = new AtomicInteger(1);
+            @Override
+            public Thread newThread(Runnable r) {
+                return new Thread(r, "geek_pool" + atomicInteger.getAndIncrement());
+            }
+        });
+        pool.execute(() -> log.info("1"));
+        pool.execute(() -> log.info("2"));
+        pool.execute(() -> log.info("3"));
+    }
+}
+```
+
+```java
+20:14:13.160 [geek_pool2] INFO ThreadPoolExecute - 2
+20:14:13.160 [geek_pool1] INFO ThreadPoolExecute - 1
+20:14:13.164 [geek_pool1] INFO ThreadPoolExecute - 3
+```
+
+
 
 #### Fork/Join
 
