技 术 栈：并发编程 提交说明: newCachedThreadPool

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -421,6 +421,7 @@ public ThreadPoolExecutor(int corePoolSize,
 1. 创建**固定大小核心线程池数量**的线程池
 2. 由于核心线程池数量和最大线程池数量相等，因此**没有救急线程**可言
 3. 阻塞队列是无界的，可以放任意数量的任务
+4. **线程任务执行完毕后不会停止运行**
 
 **应用场景**
 
@@ -465,9 +466,37 @@ public class TestThreadPoolExecute {
 20:14:13.164 [geek_pool1] INFO ThreadPoolExecute - 3
 ```
 
+##### 5)newCachedThreadPool
+
+**构造方法**
+
+```java
+public static ExecutorService newCachedThreadPool() {
+     return new ThreadPoolExecutor(
+         							0, 
+         							Integer.MAX_VALUE,
+								    60L, 
+         							TimeUnit.SECONDS,
+								    new SynchronousQueue<Runnable>());
+}
+```
+
+**特点**
+
+1. 具有缓存功能
+2. 核心线程数量为0，最大线程池数量为 Integer.MAX_VALUE，救急线程的最大空闲时间为60s，意味着
+   1. 创建的线程全部都是救急线程（在没有任务可以执行时60s后被回收）
+   2. 救急线程可以无线创建
+3. 阻塞队列采用的是`SynchronousQueue`实现的，意味着没有线程取他是放不进去的（一手交钱，一手交货）
+
+**使用场景**
+
+1. newCachedThreadPool表现为线程数量会随着任务数量不断增长，没有上限。当任务结束完毕，空闲1分钟后释放线程
+2. 适合任务密集型，但是每个任务执行较短的情况
 
 
-#### Fork/Join
+
+**代码实现**
 
 ### J.U.C
 
