技 术 栈：并发编程 提交说明: newSingleThreadExecutor的使用

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -494,7 +494,57 @@ public static ExecutorService newCachedThreadPool() {
 1. newCachedThreadPool表现为线程数量会随着任务数量不断增长，没有上限。当任务结束完毕，空闲1分钟后释放线程
 2. 适合任务密集型，但是每个任务执行较短的情况
 
+##### 6)newSingleThreadExecutor
 
+**构造方法**
+
+```java
+public static ExecutorService newSingleThreadExecutor() {
+    return new FinalizableDelegatedExecutorService
+        (new ThreadPoolExecutor(1, 1,
+                                0L, TimeUnit.MILLISECONDS,
+                                new LinkedBlockingQueue<Runnable>()));
+}
+```
+
+**使用场景**
+
+希望**多个任务串行执行**，核心线程池数量固定为1，后来再添加的任务会放入无界的阻塞队列。任务执行完毕，唯一的线程也不会释放掉
+
+**和手动创建一个线程的区别**
+
+1. 出现异常，线程池会创建一个新的线程，保证线程池的正常运行
+
+   自己创建一个单线程串行执行任务，如果任务执行失败线程就会终止，没有任何补救措施；但是如果使用`newSingleThreadExecuto`则会创建一个新的线程，不会影响线程池的正常工作
+
+   ```java
+   ExecutorService pool = Executors.newSingleThreadExecutor();
+   pool.execute(() -> {
+       log.info("1");
+       int result = 1 / 0;
+   });
+   pool.execute(() -> log.info("2"));
+   pool.execute(() -> log.info("3"));
+   ```
+
+   ```java
+   10:37:39.849 [pool-1-thread-1] INFO ThreadPoolExecute - 1
+   10:37:39.851 [pool-1-thread-2] INFO ThreadPoolExecute - 2
+   10:37:39.852 [pool-1-thread-2] INFO ThreadPoolExecute - 3
+   Exception in thread "pool-1-thread-1" java.lang.ArithmeticException: / by zero
+   	at com.kuhan.ops.monitor.system.ref.TestThreadPoolExecute.lambda$main$0(TestThreadPoolExecute.java:30)
+   	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
+   	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
+   	at java.lang.Thread.run(Thread.java:748)
+   ```
+
+   从以上日志可以看出`pool-1-thread-1`抛出异常，线程被终止掉，但是线程池又创建一个新的线程来处理后面的任务，不会影响线程池的正常工作
+
+2. `Executors.newSingleThreadExecutor()`的线程个数为1，不能修改
+
+3. `Executors.newFixedThreadPool(1)`固定线程池容量可以修改
+
+**代码实现**
 
 **代码实现**
 
