技 术 栈：并发编程 提交说明: invokeAny

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -544,9 +544,134 @@ public static ExecutorService newSingleThreadExecutor() {
 
 3. `Executors.newFixedThreadPool(1)`固定线程池容量可以修改
 
-**代码实现**
+##### 7)提交任务
 
-**代码实现**
+```java
+// 执行任务
+void execute(Runnable command);
+
+// 提交任务 task，用返回值 Future 获得任务执行结果
+<T> Future<T> submit(Callable<T> task);
+
+// 提交 tasks 中所有任务
+<T> List<Future<T>> invokeAll(Collection<? extends Callable<T>> tasks) throws InterruptedException;
+
+// 提交 tasks 中所有任务，带超时时间
+<T> List<Future<T>> invokeAll(Collection<? extends Callable<T>> tasks, long timeout, TimeUnit unit) throws InterruptedException;
+
+// 提交 tasks 中所有任务，哪个任务先成功执行完毕，返回此任务执行结果，其它任务取消
+<T> T invokeAny(Collection<? extends Callable<T>> tasks) throws InterruptedException, ExecutionException;
+
+// 提交 tasks 中所有任务，哪个任务先成功执行完毕，返回此任务执行结果，其它任务取消，带超时时间
+<T> T invokeAny(Collection<? extends Callable<T>> tasks, long timeout, TimeUnit unit) throws InterruptedException, ExecutionException, TimeoutException;
+```
+
+1. submit带返回结果使用
+   本质使用的是`保护性暂停模式`，在两个线程之间接收结果
+
+   ```java
+   @Slf4j(topic = "TestSubmit")
+   public class TestSubmit {
+       public static void main(String[] args) throws ExecutionException, InterruptedException {
+           ExecutorService pool = Executors.newFixedThreadPool(4);
+           Future<String> future = pool.submit(new Callable<String>() {
+               @Override
+               public String call() throws Exception {
+                   log.info("running");
+                   TimeUnit.SECONDS.sleep(1);
+                   return "OK";
+               }
+           });
+           log.info("返回结果：{}", future.get());
+       }
+   }
+   ```
+
+   ```java
+   10:57:59.317 [pool-1-thread-1] INFO TestSubmit - running
+   10:58:00.322 [main] INFO TestSubmit - 返回结果：OK
+   ```
+
+2. invokeAll提交任务集合
+
+   ```java
+   @Slf4j(topic = "TestSubmit")
+   public class TestSubmit {
+       public static void main(String[] args) throws ExecutionException, InterruptedException {
+           ExecutorService pool = Executors.newFixedThreadPool(3);
+           List<Future<Object>> futures = pool.invokeAll(Arrays.asList(
+                   () -> {
+                       log.info("task1 running...");
+                       TimeUnit.SECONDS.sleep(1);
+                       return "1";
+                   },
+                   () -> {
+                       log.info("task2 running...");
+                       TimeUnit.SECONDS.sleep(2);
+                       return "2";
+                   },
+                   () -> {
+                       log.info("task3 running...");
+                       TimeUnit.SECONDS.sleep(3);
+                       return "3";
+                   }
+           ));
+           futures.forEach(future -> {
+               try {
+                   log.info("result: {}", future.get());
+               } catch (InterruptedException | ExecutionException e) {
+                   e.printStackTrace();
+               }
+           });
+       }
+   }
+   ```
+
+   ```java
+   14:35:50.252 [pool-1-thread-2] INFO TestSubmit - task2 running...
+   14:35:50.252 [pool-1-thread-3] INFO TestSubmit - task3 running...
+   14:35:50.252 [pool-1-thread-1] INFO TestSubmit - task1 running...
+   14:35:53.258 [main] INFO TestSubmit - result: 1
+   14:35:53.260 [main] INFO TestSubmit - result: 2
+   14:35:53.260 [main] INFO TestSubmit - result: 3
+   ```
+
+3. invokeAny
+
+   在所有的任务队列中，返回一个最早执行完的结果，其他线程或则阻塞队列中的任务被丢弃掉
+
+   ```java
+   public static void main(String[] args) throws ExecutionException, InterruptedException {
+       ExecutorService pool = Executors.newFixedThreadPool(3);
+       String result = pool.invokeAny(Arrays.asList(
+               () -> {
+                   log.info("task1 running...");
+                   TimeUnit.SECONDS.sleep(1);
+                   return "1";
+               },
+               () -> {
+                   log.info("task2 running...");
+                   TimeUnit.SECONDS.sleep(2);
+                   return "2";
+               },
+               () -> {
+                   log.info("task3 running...");
+                   TimeUnit.SECONDS.sleep(3);
+                   return "3";
+               }
+       ));
+       log.info("result: {}", result);
+   }
+   ```
+
+   ```java
+   14:48:28.975 [pool-1-thread-3] INFO TestSubmit - task3 running...
+   14:48:28.975 [pool-1-thread-2] INFO TestSubmit - task2 running...
+   14:48:28.975 [pool-1-thread-1] INFO TestSubmit - task1 running...
+   14:48:29.985 [main] INFO TestSubmit - result: 1
+   ```
+
+   
 
 ### J.U.C
 
