--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -671,7 +671,31 @@ void execute(Runnable command);
    14:48:29.985 [main] INFO TestSubmit - result: 1
    ```
 
-   
+##### 8)关闭线程池
+
+1. shutdown
+
+   ```java
+   /*
+   线程池状态变为 SHUTDOWN
+   - 不会接收新任务
+   - 但已提交任务会执行完
+   - 此方法不会阻塞调用线程的执行
+   */
+   void shutdown();
+   ```
+
+2. shutdownNow
+
+   ```java
+   /*
+   线程池状态变为 STOP
+   - 不会接收新任务
+   - 会将队列中的任务返回
+   - 并用 interrupt 的方式中断正在执行的任务
+   */
+   List<Runnable> shutdownNow();
+   ```
 
 ### J.U.C
 
