技 术 栈：并发编程 提交说明: 异步模式之工作线程

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -913,6 +913,18 @@ public class Test25MQ {
 
 ##### ❗❗应用
 
+### 异步模式之工作线程
+
+#### 定义
+
+
+
+#### 饥饿
+
+#### 创建多少线程池合适
+
+#### 自定义线程池
+
 ### 享元模式
 
 #### 简介
