--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -917,7 +917,13 @@ public class Test25MQ {
 
 #### 定义
 
+**让有限的工作线程来轮流异步地执行无限多的工作任务，**也可以将其归类为**分工模式**。它的典型实现就是**线程池**，也体现了经典设计模式中的**享元模式**
 
+例如，海底捞的服务员（线程），轮流处理每位客人的点餐（任务），如果为每位客人都配一名专属的服务员，那 么成本就太高了（对比另一种多线程设计模式：Thread-Per-Message）
+
+**注意：不同类型的任务应该由不同的线程池执行，这样可以避免饥饿，并且可以提升效率**
+
+例如，如果一个餐馆的工人既要招呼客人（任务类型A），又要到后厨做菜（任务类型B）显然效率不咋地，分成 服务员（线程池A）与厨师（线程池B）更为合理，当然你能想到更细致的分工
 
 #### 饥饿
 
