技 术 栈：并发编程 提交说明: 异步模式之工作线程：饥饿定义

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -927,6 +927,106 @@ public class Test25MQ {
 
 #### 饥饿
 
+##### 定义
+
+**固定大小的线程池**可能会出现饥饿现象，本质是由于**工作线程数量有限**导致的线程池饥饿
+
+> 两个工人线程都是一个线程池中的工作线程，他们要做的事情是：为客人点菜，等待做好菜以后，线程上菜。这是两个阶段的工作。
+>
+> 非饥饿场景：工人A处理了点菜任务，接下来等待工人B把菜做好之后然后上菜。他们配合的挺好的不会出现饥饿现象
+>
+> 饥饿场景：如果同时出现了两个客人， 如果两个工作线程都去处理了点菜任务，这时就没人做饭了，就会出现饥饿现象
+
+##### 代码实现
+
+1. 非饥饿示例
+
+   ```java
+   @Slf4j(topic = "TestThreadPoolHungry")
+   public class TestThreadPoolHungry {
+       private static final List<String> MENU = Arrays.asList("宫保鸡丁", "鱼香肉丝", "酸菜鱼", "锅包肉");
+   
+       public static void main(String[] args) {
+           ExecutorService pool = Executors.newFixedThreadPool(2);
+           pool.execute(() -> {
+               log.info("给客人下单点菜...");
+               Future<String> future = pool.submit(() -> {
+                   String foods = cooking();
+                   log.info("开始做菜: {}", foods);
+                   return foods;
+               });
+               try {
+                   log.info("上菜：{}", future.get());
+               } catch (InterruptedException | ExecutionException e) {
+                   e.printStackTrace();
+               }
+           });
+       }
+   
+       private static String cooking() {
+           return MENU.get(new Random().nextInt(MENU.size()));
+       }
+   }
+   ```
+
+   ```java
+   16:46:07.956 [pool-1-thread-1] INFO TestThreadPoolHungry - 给客人下单点菜...
+   16:46:07.981 [pool-1-thread-2] INFO TestThreadPoolHungry - 开始做菜: 鱼香肉丝
+   16:46:07.982 [pool-1-thread-1] INFO TestThreadPoolHungry - 上菜：鱼香肉丝
+   ```
+
+   服务员线程点菜，厨师线程点菜，服务员线程获取厨师线程的执行结果然后上菜
+
+2. 饥饿示例
+
+   ```java
+   @Slf4j(topic = "TestThreadPoolHungry")
+   public class TestThreadPoolHungry {
+       private static final List<String> MENU = Arrays.asList("宫保鸡丁", "鱼香肉丝", "酸菜鱼", "锅包肉");
+   
+       public static void main(String[] args) {
+           ExecutorService pool = Executors.newFixedThreadPool(2);
+           pool.execute(() -> {
+               log.info("给客人下单点菜...");
+               Future<String> future = pool.submit(() -> {
+                   String foods = cooking();
+                   log.info("开始做菜: {}", foods);
+                   return foods;
+               });
+               try {
+                   log.info("上菜：{}", future.get());
+               } catch (InterruptedException | ExecutionException e) {
+                   e.printStackTrace();
+               }
+           });
+           pool.execute(() -> {
+               log.info("给客人下单点菜...");
+               Future<String> future = pool.submit(() -> {
+                   String foods = cooking();
+                   log.info("开始做菜: {}", foods);
+                   return foods;
+               });
+               try {
+                   log.info("上菜：{}", future.get());
+               } catch (InterruptedException | ExecutionException e) {
+                   e.printStackTrace();
+               }
+           });
+       }
+   
+       private static String cooking() {
+           return MENU.get(new Random().nextInt(MENU.size()));
+       }
+   }
+   ```
+
+   ```java
+   16:32:59.624 [pool-1-thread-2] INFO TestThreadPoolHungry - 给客人下单点菜...
+   16:32:59.624 [pool-1-thread-1] INFO TestThreadPoolHungry - 给客人下单点菜...
+   ```
+
+   从上面的日志可以看出所有的工作线程执行点菜任务，没有多余线程执行做菜任务，就会导致线程饥饿
+
 #### 创建多少线程池合适
 
 #### 自定义线程池
