--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -1027,6 +1027,65 @@ public class Test25MQ {
 
    从上面的日志可以看出所有的工作线程执行点菜任务，没有多余线程执行做菜任务，就会导致线程饥饿
 
+##### 饥饿问题解决
+
+可以创建多个线程池来解决饥饿问题
+
+```java
+@Slf4j(topic = "TestThreadPoolHungry")
+public class TestThreadPoolHungry {
+    private static final List<String> MENU = Arrays.asList("宫保鸡丁", "鱼香肉丝", "酸菜鱼", "锅包肉");
+
+    public static void main(String[] args) {
+        ExecutorService waiterPool = Executors.newFixedThreadPool(1);
+        ExecutorService cookerPool = Executors.newFixedThreadPool(1);
+        waiterPool.execute(() -> {
+            log.info("给客人下单点菜...");
+            Future<String> future = cookerPool.submit(() -> {
+                String foods = cooking();
+                log.info("开始做菜: {}", foods);
+                return foods;
+            });
+            try {
+                log.info("上菜：{}", future.get());
+            } catch (InterruptedException | ExecutionException e) {
+                e.printStackTrace();
+            }
+        });
+        waiterPool.execute(() -> {
+            log.info("给客人下单点菜...");
+            Future<String> future = cookerPool.submit(() -> {
+                String foods = cooking();
+                log.info("开始做菜: {}", foods);
+                return foods;
+            });
+            try {
+                log.info("上菜：{}", future.get());
+            } catch (InterruptedException | ExecutionException e) {
+                e.printStackTrace();
+            }
+        });
+    }
+
+    private static String cooking() {
+        return MENU.get(new Random().nextInt(MENU.size()));
+    }
+}
+```
+
+```java
+17:08:09.555 [pool-1-thread-1] INFO TestThreadPoolHungry - 给客人下单点菜...
+17:08:09.579 [pool-2-thread-1] INFO TestThreadPoolHungry - 开始做菜: 鱼香肉丝
+17:08:09.581 [pool-1-thread-1] INFO TestThreadPoolHungry - 上菜：鱼香肉丝
+17:08:09.581 [pool-1-thread-1] INFO TestThreadPoolHungry - 给客人下单点菜...
+17:08:09.582 [pool-2-thread-1] INFO TestThreadPoolHungry - 开始做菜: 宫保鸡丁
+17:08:09.582 [pool-1-thread-1] INFO TestThreadPoolHungry - 上菜：宫保鸡丁
+```
+
+
+
+
+
 #### 创建多少线程池合适
 
 #### 自定义线程池
