技 术 栈：并发编程 提交说明: 线程池设置多少线程合适

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -1086,7 +1086,22 @@ public class TestThreadPoolHungry {
 
 
 
-#### 创建多少线程池合适
+#### 线程池创建多少线程合适
+
+1. 线程数量过小不能充分利用CPU资源，容易导致饥饿
+2. 线程数量过多反而会导致CPU频繁上下文切换，反而降低程序执行效率
+
+##### CPU密集型运算
+
+数据分析运算可以认为是CPU密集型运算
+
+CPU密集型运算线程数通常设置为 `CPU核心数 + 1` 能够最大化利用CPU利用，+ 1是当线程由于`页缺失故障`（操作系统故障）或者其他原因导致暂停时，额外的这个线程可以顶替上去，进而保证CPU时钟周期不被浪费
+
+##### I/O密集型运算
+
+
+
+典型的web应用程序一般都是I/O密集型运算
 
 #### 自定义线程池
 
