技 术 栈：并发编程 提交说明: 任务调度线程池

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -697,6 +697,43 @@ void execute(Runnable command);
    List<Runnable> shutdownNow();
    ```
 
+##### 9)任务调度线程池
+
+1. 应用场景
+
+   **延时执行任务**或者**定时执行任务**
+
+2. 代码实现
+
+   ```java
+   @Slf4j(topic = "TestScheduleThreadPool")
+   public class TestScheduleThreadPool {
+       public static void main(String[] args) {
+           log.info("main thread start");
+           ScheduledExecutorService pool = Executors.newScheduledThreadPool(1);
+           pool.schedule(() -> {
+               log.info("task1");
+               try {
+                   TimeUnit.SECONDS.sleep(1);
+               } catch (InterruptedException e) {
+                   e.printStackTrace();
+               }
+           }, 1, TimeUnit.SECONDS);
+           pool.schedule(() -> {
+               log.info("task2");
+           }, 1, TimeUnit.SECONDS);
+       }
+   }
+   ```
+
+   ```java
+   20:39:41.482 [main] INFO TestScheduleThreadPool - main thread start
+   20:39:42.566 [pool-1-thread-2] INFO TestScheduleThreadPool - task2
+   20:39:42.566 [pool-1-thread-1] INFO TestScheduleThreadPool - task1
+   ```
+
+   
+
 ### J.U.C
 
 #### AQS原理
