--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -1082,10 +1082,6 @@ public class TestThreadPoolHungry {
 17:08:09.582 [pool-1-thread-1] INFO TestThreadPoolHungry - 上菜：宫保鸡丁
 ```
 
-
-
-
-
 #### 线程池创建多少线程合适
 
 1. 线程数量过小不能充分利用CPU资源，容易导致饥饿
@@ -1099,9 +1095,20 @@ CPU密集型运算线程数通常设置为 `CPU核心数 + 1` 能够最大化利
 
 ##### I/O密集型运算
 
+典型的**web应用程序**一般都是I/O密集型运算
+根据业务的场景不同，CPU不总是处于繁忙状态。例如执行业务分析时，这时候会利用CPU资源；当你执行IO操作时，远程RPC调用时，数据库操作时，这时候CPU就空闲了下来，这个时候我们可以使用多线程来提高CPU的使用率
 
+经典公式如下：
 
-典型的web应用程序一般都是I/O密集型运算
+**线程数 = CPU核心数 * 期望CPU利用率  * 总时间（CPU计算时间 + 等待时间） /  CPU计算时间**
+
+例如 4 核 CPU 计算时间是 50% ，其它等待时间是 50%，期望 cpu 被 100% 利用，套用公式
+
+`4 * 100% * 100% / 50% = 8`
+
+例如 4 核 CPU 计算时间是 10% ，其它等待时间是 90%，期望 cpu 被 100% 利用，套用公式
+
+`4 * 100% * 100% / 10% = 40`
 
 #### 自定义线程池
 
