技 术 栈：并发编程 提交说明: tomcat线程池

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -732,7 +732,22 @@ void execute(Runnable command);
    20:39:42.566 [pool-1-thread-1] INFO TestScheduleThreadPool - task1
    ```
 
-   
+
+##### 10)tomcat线程池
+
+1. tomcat线程池组件架构
+
+   ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.3m644x2xrui0.png)
+
+2. tomcat线程池组件功能介绍
+
+   1. `LimitLatch`用来接口限流，可以控制最大连接个数。类似JUC包中的`Semaphore`
+   2. Acceptor只负责接收新的socket连接
+   3. Poller只负责监听 socket channel是否有可读的I/O事件
+   4. 一旦发现可读事件，就创建一个`socketProcessor`对象，提交Executor线程池处理
+   5. Executor线程池中的工作线程最终负责处理请求
+
+
 
 ### J.U.C
 
