技 术 栈：并发编程 提交说明: Fork/Join框架

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -747,7 +747,30 @@ void execute(Runnable command);
    4. 一旦发现可读事件，就创建一个`socketProcessor`对象，提交Executor线程池处理
    5. Executor线程池中的工作线程最终负责处理请求
 
+#### Fork/Join框架
 
+##### 1)概念
+
+Fork/Join框架是jdk1.7加入的新的线程池的实现，它体现的是**分治思想**，适用于能够进行**任务拆分**的**CPU密集型运算**
+
+所谓任务拆分就是将一个大任务拆分为**算法相同**的小任务，直至不能拆分可以直接求解为止。递归相关的一下计算例如归并排序、斐波那契数列都可以使用分支思想来解决
+
+**Fork/Join框架在分支思想上使用了多线程**，可以把每个任务的分解和合并交给不同的线程来完成，进一步提升运算效率
+
+*Fork/Join默认会创建与CPU核心数相等的线程池数量*
+
+##### 2)使用
+
+提交给Fork/Join线程池的任务需要集成RecursiveTask（有返回值）或者RecursiveAction（没有返回值）
+
+例如下面提交了一个1-n之间整数的求和计算
+
+1. 代码实现
+
+   ```java
+   ```
+
+   
 
 ### J.U.C
 
