技 术 栈：并发编程 提交说明: Fork/Join框架

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -768,15 +768,65 @@ Fork/Join框架是jdk1.7加入的新的线程池的实现，它体现的是**分
 1. 代码实现
 
    ```java
-   ```
-
+   @Slf4j(topic = "TestForkJoin")
+   public class TestForkJoin {
+       public static void main(String[] args) {
+           ForkJoinPool pool = new ForkJoinPool(4);
+           Integer result = pool.invoke(new MyTask(5));
+           log.info("result：{}", result);
+       }
+   }
    
+   // 1-n之间整数的求和计算
+   @Slf4j(topic = "MyTask")
+   class MyTask extends RecursiveTask<Integer> {
+   
+       private int n;
+   
+       public MyTask(int n) {
+           this.n = n;
+       }
+   
+       @Override
+       public String toString() {
+           return "MyTask{" +
+                   "n=" + n +
+                   '}';
+       }
+   
+       @Override
+       protected Integer compute() {
+           if (n == 1) {
+               return 1;
+           }
+           MyTask task = new MyTask(n - 1);
+           // 创建一个线程执行任务(拆分任务)
+           task.fork();
+           // 获取线程任务的执行结果(合并结果)
+           return n + task.join();
+       }
+   }
+   ```
+   
+   ```java
+   [ForkJoinPool-1-worker-0] - fork() 2 + {1}
+   [ForkJoinPool-1-worker-1] - fork() 5 + {4}
+   [ForkJoinPool-1-worker-0] - join() 1
+   [ForkJoinPool-1-worker-0] - join() 2 + {1} = 3
+   [ForkJoinPool-1-worker-2] - fork() 4 + {3}
+   [ForkJoinPool-1-worker-3] - fork() 3 + {2}
+   [ForkJoinPool-1-worker-3] - join() 3 + {2} = 6
+   [ForkJoinPool-1-worker-2] - join() 4 + {3} = 10
+   [ForkJoinPool-1-worker-1] - join() 5 + {4} = 15
+   ```
+   
+   <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.71armm1mv6k0.png" alt="image" style="zoom:67%;" />
 
 ### J.U.C
 
-#### AQS原理
+#### ❗AQS原理
 
-#### ReentrantLock 原理
+#### ❗ReentrantLock 原理
 
 #### 读写锁
 
@@ -784,7 +834,7 @@ Fork/Join框架是jdk1.7加入的新的线程池的实现，它体现的是**分
 
 #### 应用之缓存
 
-#### 读写锁原理
+#### ❗读写锁原理
 
 ####  StampedLock
 
@@ -794,7 +844,7 @@ Fork/Join框架是jdk1.7加入的新的线程池的实现，它体现的是**分
 
 ##### Semaphore应用
 
-##### Semaphore原理
+##### ❗Semaphore原理
 
 #### CountdownLatch
 
@@ -810,11 +860,11 @@ Fork/Join框架是jdk1.7加入的新的线程池的实现，它体现的是**分
 
 ##### 单词计数
 
-##### ConcurrentHashMap原理
+##### ❗ConcurrentHashMap原理
 
 #### BlockingQueue
 
-##### BlockingQueue原理
+##### ❗BlockingQueue原理
 
 #### ConcurrentLinkedQueue
 
