技 术 栈：并发编程 提交说明: AQS特点，AQS子类主要实现的方法

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -826,6 +826,38 @@ Fork/Join框架是jdk1.7加入的新的线程池的实现，它体现的是**分
 
 #### ❗AQS原理
 
+##### 概述
+
+全称是`AbstractQueuedSynchronizer`（抽象的基于队列的同步器），是**阻塞式锁**和**同步器工具**的框架
+
+> 锁类型
+>
+> 1. 阻塞式锁
+>
+>    synchronized本质就是阻塞式锁
+>
+> 2. 无锁
+>
+>    CAS本质上没有使用锁，也可以理解为乐观锁
+
+1. 特点
+
+   AQS使用state属性来表示资源的状态（独占模式/共享模式），子类需要定义如何维护这个状态，控制如何获取锁和释放锁
+
+   1. `getState`获取state状态
+   2. `setState`设置state状态
+   3. `compareAndSetState`通过CAS机制设置state状态
+
+   独占模式：只能有一个线程访问共享资源；共享模式：可以有多个线程访问共享资源
+
+   提供了基于FIFO的等待队列，类似Monitor的EntryList
+
+   可以使用多个条件变量来实现等待/唤醒机制，类似于Monitor的WaitSet
+
+2. AQS子类主要实现的方法
+
+##### 实现不可重入锁
+
 #### ❗ReentrantLock 原理
 
 #### 读写锁
