技 术 栈：并发编程 提交说明: 实现不可重入锁

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -856,9 +856,188 @@ Fork/Join框架是jdk1.7加入的新的线程池的实现，它体现的是**分
 
 2. AQS子类主要实现的方法
 
+   1. tryAcquire 尝试获取锁
+
+      ```java
+      // 如果获取锁失败
+      if (!tryAcquire(arg)) {
+       // 入队, 可以选择阻塞当前线程 park unpark
+      }
+      ```
+
+   2. tryRelease 尝试释放锁
+
+      ```java
+      // 如果释放锁成功
+      if (tryRelease(arg)) {
+       // 让阻塞线程恢复运行
+      }
+      ```
+
+   3. tryAcquireShared
+
+   4. tryReleaseShared
+
+   5. isHeldExclusively
+
 ##### 实现不可重入锁
 
+自定义不可重入锁
+
+```java
+/**
+ * 自定义一个不可重入锁
+ * 即独占锁(只能有一个线程访问共享资源)
+ */
+class MyLock implements Lock {
+
+    // MySync实现锁的大部分功能
+    class MySync extends AbstractQueuedSynchronizer {
+
+        /**
+         * 尝试获取锁
+         * @param arg
+         * @return
+         */
+        @Override
+        protected boolean tryAcquire(int arg) {
+            if(compareAndSetState(0, 1)) {
+                // 加上了锁，并且设置owner为当前线程
+                setExclusiveOwnerThread(Thread.currentThread());
+                return true;
+            } else {
+                return false;
+            }
+        }
+
+        /**
+         * 尝试释放锁
+         * @param arg
+         * @return
+         */
+        @Override
+        protected boolean tryRelease(int arg) {
+            // 释放了锁，设置当前线程为null
+            setExclusiveOwnerThread(null);
+            // volatile 之前的代码会加入写屏障
+            setState(0);
+            return true;
+        }
+
+        /**
+         * 是否持有独占锁
+         * @return
+         */
+        @Override
+        protected boolean isHeldExclusively() {
+            return getState() == 1;
+        }
+
+        /**
+         * @return 创建条件变量
+         */
+        public Condition newCondition() {
+            return new ConditionObject();
+        }
+
+    }
+
+    private MySync mySync = new MySync();
+
+    /**
+     * 获取锁(获取失败则线程进入阻塞队列)
+     */
+    @Override
+    public void lock() {
+        mySync.acquire(1);
+    }
+
+    /**
+     * 可打断地获取锁
+     * @throws InterruptedException
+     */
+    @Override
+    public void lockInterruptibly() throws InterruptedException {
+        mySync.acquireInterruptibly(1);
+    }
+
+    /**
+     * 尝试获取锁(只会获取一次锁)
+     * @return
+     */
+    @Override
+    public boolean tryLock() {
+        return mySync.tryAcquire(1);
+    }
+
+    /**
+     * 带超时时间地尝试获取锁
+     * @param time
+     * @param unit
+     * @return
+     * @throws InterruptedException
+     */
+    @Override
+    public boolean tryLock(long time, TimeUnit unit) throws InterruptedException {
+        return mySync.tryAcquireNanos(1, unit.toNanos(time));
+    }
+
+    /**
+     * 释放锁
+     */
+    @Override
+    public void unlock() {
+        mySync.release(1);
+    }
+
+    /**
+     * 创建条件变量
+     * @return
+     */
+    @Override
+    public Condition newCondition() {
+        return mySync.newCondition();
+    }
+}
+```
+
+主线程实现
+
+```java
+@Slf4j(topic = "TestAQS")
+public class TestAQS {
+    public static void main(String[] args) {
+        MyLock lock = new MyLock();
+
+        new Thread(() -> {
+           lock.lock();
+           try {
+               log.info("locking...");
+               TimeUnit.SECONDS.sleep(1);
+           } catch (InterruptedException e) {
+               e.printStackTrace();
+           } finally {
+               log.info("unlocking...");
+               lock.unlock();
+           }
+        }, "t1").start();
+
+        new Thread(() -> {
+            lock.lock();
+            try {
+                log.info("locking...");
+            } finally {
+                log.info("unlocking...");
+                lock.unlock();
+            }
+        }, "t2").start();
+    }
+}
+```
+
 #### ❗ReentrantLock 原理
+
+
 
 #### 读写锁
 
