技 术 栈：并发编程 提交说明: 缓存更新策略

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -1037,13 +1037,39 @@ public class TestAQS {
 
 #### ❗ReentrantLock 原理
 
-
-
 #### 读写锁
 
 #### ReentrantReadWriteLock
 
+
+
 #### 应用之缓存
+
+##### 缓存更新策略
+
+多线程环境下做更新操作时，是先清除缓存还是先更新数据库
+
+> 线程B做更新操作（将数值1 ==> 数值2）、线程A做查询操作
+
+1. 先清除缓存
+
+   ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.7gqlhe502ic0.png)
+
+   1. 线程B先清空缓存，还没有将最新的数值更新到数据库
+   2. 这时线程A进来做查询操作，查询到的是数据库中旧值，数值1
+   3. 这个时候缓存已经被清空，线程A将查询出来的旧值1  放入缓存
+   4. 此时线程B将最新的数据 数值2 更新到数据库
+   5. 但是这个时候缓存已经有数据，但是数据是旧值 1。此后再次查询数据直接走的是缓存，永远查询的是旧值 1（**数据不一致**）
+
+2. 先更新数据库
+
+   ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.1u8iodmpny1s.png)
+
+   1. 线程B先将最新的数据2 更新至database
+   2. 这时线程A查询缓存，查询的结果是原来的旧值1（数据不一致）
+   3. 线程B清空缓存
+   4. 这是线程A再次查询数据，发现catch的数据已经被清空，开始查询database，得到的是最新的数据2，然后将最新的数据更新至catch
+   5. 此后线程A再查询时，就可以得到最新的数据
 
 #### ❗读写锁原理
 
