技 术 栈：并发编程 提交说明: 缓存更新策略

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -1047,7 +1047,7 @@ public class TestAQS {
 
 ##### 缓存更新策略
 
-多线程环境下做更新操作时，是先清除缓存还是先更新数据库
+多线程环境下做更新操作时，是先清除缓存还是先更新数据库（**先更新数据库，再清空缓存合适**）
 
 > 线程B做更新操作（将数值1 ==> 数值2）、线程A做查询操作
 
@@ -1070,6 +1070,8 @@ public class TestAQS {
    3. 线程B清空缓存
    4. 这是线程A再次查询数据，发现catch的数据已经被清空，开始查询database，得到的是最新的数据2，然后将最新的数据更新至catch
    5. 此后线程A再查询时，就可以得到最新的数据
+
+   **先更新数据库这种情况会出现较少次数的数据不一致问题，如果不能容忍数据不一致问题，我们可以通过加锁的方式保证数据的强一致性，这种情况下程序的性能会相对降低**
 
 #### ❗读写锁原理
 
