技 术 栈：并发编程 提交说明: StampedLock的使用

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -1077,6 +1077,8 @@ public class TestAQS {
 
 ####  StampedLock
 
+StampedLock是jdk1.8加入的，目的是为了进一步优化读性能。使用方式：在使用读锁、写锁时候可以配合`时间戳`来使用
+
 #### Semaphore
 
 ##### 基本使用
