技 术 栈：并发编程 提交说明: 信号量的使用

--- a/doc/Java并发编程/并发编程-基础篇-并发工具.md
+++ b/doc/Java并发编程/并发编程-基础篇-并发工具.md
@@ -1079,7 +1079,73 @@ public class TestAQS {
 
 StampedLock是jdk1.8加入的，目的是为了进一步优化读性能。使用方式：在使用读锁、写锁时候可以配合`时间戳`来使用
 
-#### Semaphore
+加/释放读锁
+
+```java
+long stamp = lock.readLock();
+lock.unlockRead(stamp);
+```
+
+加/释放写锁
+
+```java
+long stamp = lock.writeLock();
+lock.unlockWrite(stamp);
+```
+
+StampedLock支持tryOptimisticRead()`乐观读`（没有加锁）方式，读取完毕后做一次**戳校验**，如果校验通过，表示在这期间并没有其他线程做写操作，数据确实可以安全使用；如果校验没有通过则需要重新获取锁，保证数据的安全性
+
+```java
+long stamp = lock.tryOptimisticRead();
+// 校验
+if(!lock.validate(stamp)) {
+    // 锁升级
+}
+```
+
+#### Semaphore(并发限流)
+
+信号量：用来限制同时访问共享资源的线程数量上限，即并发限流的操作
+
+```java
+@Slf4j(topic = "TestSemaphore")
+public class TestSemaphore {
+    public static void main(String[] args) {
+        Semaphore semaphore = new Semaphore(3);
+        for (int i = 0; i < 10; i++) {
+            new Thread(() -> {
+                try {
+                    // 尝试获取信号量
+                    semaphore.acquire();
+                    log.info("当先线程名称：{}", Thread.currentThread().getName());
+                    TimeUnit.SECONDS.sleep(2);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                } finally {
+                    // 释放信号量
+                    semaphore.release();
+                }
+            }).start();
+        }
+    }
+}
+```
+
+```java
+15:08:39.675 [Thread-0] INFO TestSemaphore - 当先线程名称：Thread-0
+15:08:39.675 [Thread-1] INFO TestSemaphore - 当先线程名称：Thread-1
+15:08:39.675 [Thread-2] INFO TestSemaphore - 当先线程名称：Thread-2
+    
+15:08:41.694 [Thread-6] INFO TestSemaphore - 当先线程名称：Thread-6
+15:08:41.694 [Thread-7] INFO TestSemaphore - 当先线程名称：Thread-7
+15:08:41.694 [Thread-3] INFO TestSemaphore - 当先线程名称：Thread-3
+    
+15:08:43.703 [Thread-5] INFO TestSemaphore - 当先线程名称：Thread-5
+15:08:43.703 [Thread-4] INFO TestSemaphore - 当先线程名称：Thread-4
+15:08:43.703 [Thread-9] INFO TestSemaphore - 当先线程名称：Thread-9
+    
+15:08:45.711 [Thread-8] INFO TestSemaphore - 当先线程名称：Thread-8
+```
 
 ##### 基本使用
 
