技 术 栈：JVM内存结构 提交说明: 虚拟机栈定义

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -45,6 +45,14 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 ##### 2.1定义
 
+栈：每个线程运行时需要的内存
+
+栈帧：每个方法运行时需要的内存（方法参数、局部变量、返回地址都会用到内存）
+
+栈是先进后出的数据结构。线程运行时需要用到虚拟机栈，每创建一个线程就会开辟一块栈内存。每个栈由多个栈帧组成，一个栈帧对应着一次方法的调用
+
+栈和栈帧对应的关系：每次调用一个方法会给这个方法划分一块栈帧空间，并且压入栈内；方法执行结束这个栈帧出栈并且释放栈帧对应的内存空间
+
 ##### 2.2栈内存溢出
 
 ##### 2.3线程运行诊断
