技 术 栈: JVM 提交说明: JVM内存结构

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -53,9 +53,17 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 栈和栈帧对应的关系：每次调用一个方法会给这个方法划分一块栈帧空间，并且压入栈内；方法执行结束这个栈帧出栈并且释放栈帧对应的内存空间
 
-##### 2.2栈内存溢出
+每个线程只能有一个**活动栈帧**，对应着那个正在执行的方法。
 
-##### 2.3线程运行诊断
+##### 2.2 问题辨析
+
+1. 垃圾回收是否涉及栈内存
+2. 栈内存分配越大越好吗
+3. 方法内的局部变量是否是线程安全的
+
+##### 2.3 栈内存溢出
+
+##### 2.4 线程运行诊断
 
 
 
@@ -63,5 +71,33 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 #### 4.堆
 
+##### 4.1 定义
+
+##### 4.2 堆内存溢出
+
+##### 4.3 堆内存诊断
+
 #### 5.方法区
+
+##### 5.1 定义
+
+##### 5.2 组成
+
+##### 5.3 组成内存溢出
+
+##### 5.4 运行时常量池
+
+##### 5.5 StringTable特性
+
+##### 5.6 StringTable位置
+
+##### 5.7 StringTable垃圾回收
+
+##### 5.8 StringTable性能调优
+
+#### 6 直接内存
+
+##### 6.1 定义
+
+##### 6.2 分配和回收原理
 
