技 术 栈: JVM 提交说明: 关于虚拟机栈的问题辨析

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -58,8 +58,25 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 ##### 2.2 问题辨析
 
 1. 垃圾回收是否涉及栈内存
+
+   栈内存的消耗本质上是一次次的方法调用所占用的内存，随着方法的执行结束，栈帧会被弹出栈，内存会被自动回收掉，所以栈内存不涉及垃圾回收
+
 2. 栈内存分配越大越好吗
-3. 方法内的局部变量是否是线程安全的
+
+   栈内存分配越大，反而会影响到分配的最大的线程数量
+
+3. 分配栈内存参数
+
+   ```shell
+   # 分配1M的栈内存空间
+   -Xss 1m # Linux系统默认的栈内积大小为1M
+   ```
+
+4. 方法内的局部变量是否是线程安全的
+
+   线程共享的局部变量（static变量）需要考虑线程安全问题
+
+   线程私有的局部变量不需要考虑线程安全问题
 
 ##### 2.3 栈内存溢出
 
