--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -74,9 +74,44 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 4. 方法内的局部变量是否是线程安全的
 
-   线程共享的局部变量（static变量）需要考虑线程安全问题
+   1. 如果方法内局部变量逃离了方法的作用范围（引用类型的参数、引用类型的返回值），该方法不是线程安全的
+   2. 如果局部变量引用了对象，并且逃离了方法的作用范围，需要考虑线程安全问题
 
-   线程私有的局部变量不需要考虑线程安全问题
+   ```java
+   /**
+    * StringBuilder是线程私有变量，因此是线程安全的
+    */
+   private static void fun1() {
+       StringBuilder sb = new StringBuilder();
+       sb.append("1");
+       sb.append("2");
+       sb.append("3");
+       System.out.println(sb.toString());
+   }
+   
+   /**
+    * StringBuilder可能存在多个线程调用sb，因此不是线程安全的
+    */
+   private static void fun2(StringBuilder sb) {
+       sb.append("1");
+       sb.append("2");
+       sb.append("3");
+   }
+   
+   /**
+    * 返回值StringBuilder逃离了方法的作用范围 可能存在其他线程引用返回值，不是线程安全的
+    * @return
+    */
+   private static StringBuilder fun3() {
+       StringBuilder sb = new StringBuilder();
+       sb.append("1");
+       sb.append("2");
+       sb.append("3");
+       return sb;
+   }
+   ```
+
+   
 
 ##### 2.3 栈内存溢出
 
